# axiomregent

./: .gitignore  Cargo.toml  Makefile  README.md  _mcp_test_features.sh  tmp1.md  tmp2.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
changes/: README.md
changes/000_governance_baseline/: 00-meta.json  01-architecture.md  04-walkthrough.md
changes/001_core_router/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/002_snapshot_workspace/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/003_featuregraph_registry/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/004_governance_engine/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/005_xray_analysis/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/006_antigravity_automation/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/007_run_skills/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/008_documentation_sync/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md
changes/009_verification_skills/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md  05-status.json
changes/010_encore_ts_skeleton/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md  05-status.json
changes/011_parse_meta/: 00-meta.json  01-implementation_plan.md  04-walkthrough.md  05-status.json
changes/012_env_run_lifecycle/: 00-meta.json  01-implementation_plan.md  02-task.md  03-walkthrough.md  05-status.json
changes/013_log_streaming_and_polish/: 00-meta.json  01-implementation_plan.md  02-task.md  03-walkthrough.md  05-status.json
changes/014_resolve_build_issues/: 00-meta.json  02-task.md  03-walkthrough.md  implementation_plan.md
changes/015_verify_encore_run/: implementation_plan.md  plan.md  task.md  walkthrough.md
crates/antigravity/: Cargo.toml
crates/antigravity/src/: agent.rs  canonical.rs  executor.rs  id.rs  lib.rs  safety.rs  schemas.rs  validator.rs
crates/antigravity/src/schemas/: verify-result.schema.json
crates/antigravity/src/verification/: config.rs  engine.rs  mod.rs  runner.rs
crates/antigravity/tests/: golden_tests.rs
crates/encore/libs/pingora/pingora-cache/: Cargo.toml
crates/encore/libs/pingora/pingora-cache/src/: cache_control.rs  hashtable.rs  storage.rs
crates/encore/libs/pingora/pingora-core/: Cargo.toml
crates/encore/libs/pingora/pingora-error/src/: lib.rs
crates/encore/libs/pingora/pingora-ketama/src/: lib.rs
crates/encore/libs/pingora/pingora-proxy/: Cargo.toml
crates/encore/libs/sfv/src/: ref_serializer.rs
crates/encore/libs/swc/: Cargo.toml
crates/encore/libs/swc/crates/ast_node/: Cargo.toml
crates/encore/libs/swc/crates/swc_ecma_ast/: Cargo.toml
crates/encore/libs/swc/crates/swc_ecma_parser/: Cargo.toml
crates/encore/libs/swc/crates/swc_macros_common/: Cargo.toml
crates/encore/libs/swc_common/: .cargo_vcs_info.json  Cargo.toml
crates/encore/runtimes/core/: Cargo.toml
crates/encore/tsparser/: Cargo.toml
crates/encore/tsparser/litparser/: Cargo.toml
crates/encore/tsparser/litparser-derive/: Cargo.toml
crates/encore/tsparser/src/parser/: module_loader.rs  parser.rs
crates/encore/tsparser/src/runtimeresolve/: node.rs  tsconfig.rs
crates/encore/tsparser/src/testutil/: mod.rs  testresolve.rs
crates/encore/utils/: Cargo.toml
crates/featuregraph/: Cargo.toml
crates/featuregraph/src/: graph.rs  lib.rs  locate.rs  preflight.rs  scanner.rs  tools.rs
crates/featuregraph/tests/: golden.rs
crates/featuregraph/tests/golden/: features_graph.json
crates/run/: Cargo.toml
crates/run/src/: lib.rs  main.rs  registry.rs  runner.rs  scanner.rs  state.rs
crates/run/src/skills/: lint_gofumpt.rs  mod.rs  test_build.rs  test_go.rs
crates/xray/: Cargo.toml
crates/xray/src/: canonical.rs  digest.rs  docs.rs  hash.rs  invariant_tests.rs  language.rs  lib.rs  loc.rs  main.rs  schema.rs  traversal.rs  write.rs
crates/xray/tests/: golden_scan.rs  index_format_test.rs
crates/xray/tests/fixtures/min_repo/: main.go
crates/xray/tests/outputs/run1/: index.json
spec/: features.yaml  verification.yaml
spec/antigravity/: automation.md  protocol.md  safety.md
spec/core/: encore_ts.md  featuregraph.md  governance.md  router.md  snapshot-workspace.md
spec/run/: skills.md
spec/xray/: analysis.md  index-format.md  scan-policy.md
src/: antigravity_tools.rs  feature_tools.rs  internal_client.rs  lib.rs  lib.rs.original  main.rs  main.rs.original  run_tools.rs  xray_tools.rs
src/io/: memfs.rs  mod.rs
src/protocol/: mod.rs  types.rs
src/resolver/: alias_map.rs  git_remote.rs  mod.rs  order.rs  workspace.rs
src/router/: cache.rs  mod.rs  mod.rs.original  mounts.rs
src/skills/: mod.rs
src/snapshot/: lease.rs  mod.rs  store.rs  tools.rs
src/tools/: mod.rs
src/tools/encore_ts/: env.rs  mod.rs  parse.rs  projection.rs  run.rs  schemas.rs  state.rs  tools.rs
src/util/: mod.rs  paths.rs  stable.rs
src/workspace/: mod.rs
tests/: antigravity_integration.rs  encore_integration.rs  mcp_contract.rs  mcp_featuregraph_test.rs  mcp_router_contract_test.rs  mcp_tools_test.rs  no_stdout_pollution.rs  persistence.rs  run_streaming_test.rs  snapshot_determinism.rs  snapshot_pagination.rs  stale_lease_test.rs  stdio_integrity.rs  test_antigravity_integration.rs  verify_encore_run.rs  verify_test.rs
tests/fixtures/encore_app/: .gitignore  encore.app  greeting.ts
tests/golden/: encore_parse_snapshot.json  tools_list.json
(+30 files in other folders)
