# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "axiomregent"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
dirs = "5.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.30", features = ["bundled"] }
zstd = "0.13"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
# Optional async runtime for future rmcp support
tokio = { version = "1.0", features = ["full"], optional = true }
similar = "2.7.0"
tar = "0.4.44"
log = "0.4.29"
env_logger = "0.11.8"
swc_common = { version = "0.33", features = ["tty-emitter"] }
encore-tsparser = { path = "crates/encore/tsparser" }

[features]
default = ["transport-stdio", "resolver-local", "skills-core"]
transport-stdio = []
resolver-local = []
skills-core = []
deny-exec = []
rmcp = ["tokio"]

[workspace]
members = [
    "crates/antigravity",
    "crates/featuregraph",
    "crates/run",
    "crates/xray",
    "crates/encore/tsparser",
]

[dependencies.featuregraph]
path = "crates/featuregraph"

[dependencies.xray]
path = "crates/xray"

[dependencies.antigravity]
path = "crates/antigravity"

[dependencies.run]
path = "crates/run"

[patch.crates-io]
swc_ecma_parser = { path = "crates/encore/libs/swc/crates/swc_ecma_parser" }
swc_ecma_ast = { path = "crates/encore/libs/swc/crates/swc_ecma_ast" }
swc_ecma_transforms_base = { path = "crates/encore/libs/swc/crates/swc_ecma_transforms_base" }
swc_atoms = { path = "crates/encore/libs/swc/crates/swc_atoms" }
swc_common = { path = "crates/encore/libs/swc/crates/swc_common" }
swc_ecma_loader = { path = "crates/encore/libs/swc/crates/swc_ecma_loader" }
swc_ecma_visit = { path = "crates/encore/libs/swc/crates/swc_ecma_visit" }
