# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "run"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
ignore = "0.4.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "8.0.0"
